kubernetes/apps/monitoring/grafana/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.toskbot.xyz`)
      kind: Rule
      services:
        - name: grafana
          port: service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: grafana.toskbot.xyz
